tests/rosetta/out/Fortran/arithmetic-numbers.error
gfortran: exit status 1
/tmp/arithmetic-numbers.f90:100:15:

  100 |       out = (s(i+1:(i + 1)) + out)
      |               1
Error: Expected a right parenthesis in expression at (1)
/tmp/arithmetic-numbers.f90:199:10:

  199 |       last = arr((((x - 1))+1))
      |          1
Error: Symbol ‘last’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:178:9:

  178 |     limit = 1228663
      |         1
Error: Symbol ‘limit’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:135:5:

  135 |     n = 3
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/arithmetic-numbers.f90:131:56:

  131 |   recursive integer function arithmeticNumbers(limit,spf) result(res)
      |                                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:110:46:

  110 |   recursive integer function primeCount(primes,last,spf) result(res)
      |                                              1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘primes’ at (1)
/tmp/arithmetic-numbers.f90:110:55:

  110 |   recursive integer function primeCount(primes,last,spf) result(res)
      |                                                       1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:64:43:

   64 |   recursive integer function primesFrom(spf,limit) result(res)
      |                                           1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘spf’ at (1)
/tmp/arithmetic-numbers.f90:181:36:

  181 |     arr = arithmeticNumbers(1000000,spf)
      |                                    1
Error: Rank mismatch in argument ‘spf’ at (1) (scalar and rank-1)
/tmp/arithmetic-numbers.f90:174:4:

  174 |     res = arr
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arithmetic-numbers.f90:85:8:

   85 |     s = s1
      |        1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/arithmetic-numbers.f90:87:10:

   87 |       s = ' ' // s
      |          1
Error: Operands of string concatenation operator at (1) are CHARACTER(1)/INTEGER(4)
/tmp/arithmetic-numbers.f90:86:20:

   86 |     do while ((size(s) < 3))
      |                    1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:89:10:

   89 |     res = s
      |          1
Error: Cannot convert INTEGER(4) to CHARACTER(100) at (1)
/tmp/arithmetic-numbers.f90:188:16:

  188 |         line = (line + pad3(arr((((i + j))+1))))
      |                1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/arithmetic-numbers.f90:95:8:

   95 |     s = s2
      |        1
Error: Cannot convert CHARACTER(100) to INTEGER(4) at (1)
/tmp/arithmetic-numbers.f90:97:14:

   97 |     i = (size(s) - 1)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:102:33:

  102 |       if ((((mod(c,3) == 0) .and. i) > 0)) then
      |                                 1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/arithmetic-numbers.f90:201:14:

  201 |       print *, trim(trim(''//char(10)//'The ' // commatize(x)) // 'th arithmetic number is: ') // lastc
      |              1
Error: Operands of string concatenation operator at (1) are CHARACTER(*)/INTEGER(4)
/tmp/arithmetic-numbers.f90:204:30:

  204 |       print *, trim(trim(trim('The count of such numbers <= ' // lastc) // ' which are composite is ') // commatize(comp)) // '.'
      |                              1
Error: Operands of string concatenation operator at (1) are CHARACTER(29)/INTEGER(4)
/tmp/arithmetic-numbers.f90:115:14:

  115 |     hi = size(primes)
      |              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/arithmetic-numbers.f90:79:4:

   79 |     res = primes
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/arithmetic-numbers.f90:61:4:

   61 |     res = spf
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
